# ai-search-bangs

./: .env.example  .gitignore  Cargo.toml  README.md  prompt.md  search.db
.github/workflows/: build.yml
.sqlx/: query-303183879dbc666e4f70f0c4bb013c2f3d959a27b2e3f78014f0b2818dceca09.json  query-6deb9e28a5246fdc1738c4deb7325729a5eb4e2e96015541ac2c3857e186d361.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-71ef0263d66d60b9c41e25ade4e632f6a8be78f035fb8b522bf7cba8c9c56773.json  query-ee753fc0f59e5f7685ceb15e0b17e170c1cb8b398822904d68cb8379de63d848.json
migrations/: 20250723162829_create_users_table.up.sql  20250724121504_create_cache_table.up.sql
src/: llm.rs  main.rs  model.rs  service.rs
src/controller/: auth.rs  search.rs
src/llm/: openai.rs
src/model/: search.rs
src/service/: auth.rs  search.rs  turnstile.rs
static/: index.html  login.html  script.js  style.css
