[package]
name = "ai-search-bangs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.12", features = ["stream", "json"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
futures-util = "0.3.31"
urlencoding = "2.1.3"
log = "0.4"
env_logger = "0.11"
lru = "0.12"
tokio = { version = "1", features = ["sync"] }
governor = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"

[[bin]]
name = "bangs"
path = "src/main.rs"
